# acl-test-data

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  make.py
.github/workflows/: build.yml
acl-sjson/: CMakeLists.txt
acl-sjson-core/: CMakeLists.txt
acl-sjson-core/includes/acl-sjson/: acl_version.h  io.h  metadata.h  sample.h  track.h  track_array.h  track_description.h
acl-sjson-core/sources/: acl_version.cpp  io.cpp  metadata.cpp  sample.cpp  track.cpp  track_array.cpp
acl-sjson/sources/: command_line_options.cpp  command_line_options.h  convert.cpp  convert.h  info.cpp  info.h  main.cpp  utils.cpp  utils.h
acl-v2.0-shim/: CMakeLists.txt
acl-v2.0-shim/includes/acl-sjson/: api_v20.h
acl-v2.0-shim/sources/: reader.cpp  writer.cpp
acl-v2.1-shim/: CMakeLists.txt
acl-v2.1-shim/includes/acl-sjson/: api_v21.h
acl-v2.1-shim/sources/: reader.cpp  writer.cpp
cmake/: CMakeCompiler.cmake
docs/: development_setup.md
regression_tests/: 09_02.acl.sjson  09_02_multi_root.acl.sjson  09_02_with_inf_error.acl.sjson  09_02_with_rising_scale.acl.sjson  09_02_with_scale.acl.sjson  09_02_with_zero_scale.acl.sjson  102_09.acl.sjson  103_01.acl.sjson  104_30.acl.sjson  121_10.acl.sjson  127_14.acl.sjson  13_07.acl.sjson  140_05.acl.sjson  27_06.acl.sjson  49_09.acl.sjson  49_15.acl.sjson  76_07.acl.sjson  81_16.acl.sjson  81_18.acl.sjson  81_18_looping.acl.sjson  82_01.acl.sjson  82_18.acl.sjson  90_10.acl.sjson  93_01.acl.sjson  93_01_zero_range_extent.acl.sjson  README.md  metadata.sjson  no_output_scalar_tracks.acl.sjson  no_output_transform_tracks.acl.sjson  track_list_float1f.acl.sjson  track_list_float2f.acl.sjson  track_list_float3f.acl.sjson  track_list_float3f_looping.acl.sjson  track_list_float4f.acl.sjson  track_list_remap_output.acl.sjson  track_list_vector4f.acl.sjson
tools/: setup_linux_compiler.sh  setup_osx_compiler.sh
